--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-theme: jekyll-theme-slate
+# Conversion
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
