--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,1 @@
-# Conversion
-markdown: kramdown
-highlighter: rouge
-lsi: false
-excerpt_separator: "\n\n"
-incremental: false
+theme: jekyll-theme-slate
